# sw_solver

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  animation.py  constraints.txt  driver-gt4py.py  driver-numpy.py  driver.py  setup.cfg  setup.py
.github/workflows/: ci.yml
data/: create_test_data.py  swes-numpy-ref-10-h.npy  swes-numpy-ref-10-phi.npy  swes-numpy-ref-10-t.npy  swes-numpy-ref-10-theta.npy  swes-numpy-ref-10-u.npy  swes-numpy-ref-10-v.npy  swes-ref-numpy-0-M10-N10-T2-1-h  swes-ref-numpy-0-M10-N10-T2-1-u  swes-ref-numpy-0-M10-N10-T2-1-v  swes-ref-numpy-0-M20-N20-T1-1-h  swes-ref-numpy-0-M20-N20-T1-1-u  swes-ref-numpy-0-M20-N20-T1-1-v
examples/: README.md  ex1-numpy.py  ex2-gt4py.py
src/sw_solver/: __init__.py  grid.py  gt4py.py  ic.py  numpy.py  utils.py
tests/: gt4py_test.py  numpy_test.py  test_numpy.py
