[metadata]
name = sw-solver
version = 0.0.1
author = Johann Dahm
author_email = johann.dahm@gmail.com
description = A finite difference shallow water solver
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ai2cm/sw_solver
project_urls =
    Bug Tracker = https://github.com/ai2cm/sw_solver/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy >= 1.15
    gt4py @ git+https://github.com/GridTools/gt4py@b9056de34b9072e426806044c1c69ab75472273b
    # matplotlib >= 3.4.3
    # cartopy >= 0.20.0

[options.packages.find]
where = src

[flake8]
docstring-convention=numpy
ignore=
    # E800 Found commented out code
    E800,
    # E501 line too long
    E501,
    # W503 line break before binary operator
    W503

[tox:tox]
envlist = py38

[testenv]
deps = pytest
commands = pytest {posargs} tests/
